django_backend/k8s-backend.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sports-backend
  template:
    metadata:
      labels:
        app: sports-backend
    spec:
      containers:
      - name: django-container
        image: yashjadhav23/sports-backend:30
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
