django_backend/k8s-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sports-frontend
  template:
    metadata:
      labels:
        app: sports-frontend
    spec:
      containers:
      - name: frontend
        image: sports-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sports-frontend-service
spec:
  selector:
    app: sports-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
