django_backend/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sports-backend-service
spec:
  type: ClusterIP
  selector:
    app: sports-backend
  ports:
    - name: http   # 👈 ADD THIS (CRITICAL)
      protocol: TCP
      port: 8000
      targetPort: 8000
